@@ -1,3 +1,4 @@
+	* Fixes to signal handling
 	* Can work in daemon mode
 	* Fixes to linked list library
 	* File update is ACK/NACK ed from the slave
